--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap';
 /* Importing ngx-toastr file. */
 @import "~ngx-toastr/toastr";
 /* Importing ng-select file. */
