finish migration to angular 15

--- a/src/app/modules/core/components/sidebar-list-item/sidebar-list-item.component.html
+++ b/src/app/modules/core/components/sidebar-list-item/sidebar-list-item.component.html
@@ -17,13 +17,13 @@
                 </span>
             </div>
 
-            <svg [ngClass]="{'animate': showConetnt}" xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 20 20" fill="#e7cfb4" *ngIf="sidebarItem.children">
+            <svg [ngClass]="{'animate': showContent}" xmlns="http://www.w3.org/2000/svg" width="10" viewBox="0 0 20 20" fill="#e7cfb4" *ngIf="sidebarItem.children">
                 <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                       clip-rule="evenodd" />
             </svg>
         </a>
 
-        <div class="w-100 nested-items" [ngClass]="{'showContent': showConetnt}" *ngIf="sidebarItem.children">
+        <div class="w-100 nested-items" [ngClass]="{'showContent': showContent}" *ngIf="sidebarItem.children">
             <mat-list class="d-flex flex-column p-0" role="list">
                 <mat-list-item role="listitem" *ngFor="let child of sidebarItem.children" [secure]="child.permissions">
                     <a class="font-14 w-100 h-100 cursor-pointer" [routerLink]="[child.routerLinkName]">
