--- a/src/app/modules/features/account/components/login/login.component.html
+++ b/src/app/modules/features/account/components/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card class="login-card">
+<mat-card appearance="outlined" class="login-card">
     <mat-card-header class="d-flex justify-content-center">
         <mat-card-title class="font-26 m-0 mb-3">{{ ('ACCOUNT.' + pageType) | translate }}</mat-card-title>
         <mat-card-subtitle class="font-16">{{ ('ACCOUNT.' + (pageType + '_SUBTITLE')) | translate }}</mat-card-subtitle>
