--- a/src/app/modules/features/user-management/roles/components/assign-permissions-to-role/assign-permissions-to-role.component.html
+++ b/src/app/modules/features/user-management/roles/components/assign-permissions-to-role/assign-permissions-to-role.component.html
@@ -24,7 +24,7 @@
             {{ 'ACTIONS.CANCEL' | translate }}
         </button>
 
-        <button class="main-btn main font-14 text-white px-4 m-inline-start-3" type="submit" (click)="submit()" [disabled]="assignPermissionFormGroup?.invalid"
+        <button class="main-btn main font-14 text-white px-4 m-inline-start-3" type="submit" (click)="submit()" [disabled]="assignPermissionFormGroup.invalid"
                 mat-flat-button>
             {{ 'ACTIONS.SAVE' | translate }}
         </button>
