--- a/src/app/modules/core/components/navbar/navbar.component.scss
+++ b/src/app/modules/core/components/navbar/navbar.component.scss
@@ -8,9 +8,10 @@
     color: $black;
     box-shadow: 3px 0 10px 0 rgba(183, 192, 206, 0.2);
 
-    .mat-list {
-        .mat-list-item {
-            .mat-list-item-content {
+    .mat-mdc-list {
+        .mat-mdc-list-item {
+            /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version. */
+            .mat-mdc-list-item-content {
                 padding: 0 !important;
             }
         }
