--- a/src/app/modules/core/components/sidebar-list-item/sidebar-list-item.component.scss
+++ b/src/app/modules/core/components/sidebar-list-item/sidebar-list-item.component.scss
@@ -3,11 +3,11 @@
 ::ng-deep app-sidebar-list-item {
     width: 100%;
 
-    .mat-list {
-        .mat-list-item {
+    .mat-mdc-list {
+        .mat-mdc-list-item {
             height: max-content !important;
-
-            .mat-list-item-content {
+            /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+            .mat-mdc-list-item-content {
                 padding: 0 !important;
             }
         }
@@ -33,7 +33,7 @@
         }
 
         svg {
-            min-width: 20px;
+            min-width: 20px !important;
             transform: rotate(0deg);
 
             &.animate {
