--- a/src/app/modules/core/components/sidebar/sidebar.component.scss
+++ b/src/app/modules/core/components/sidebar/sidebar.component.scss
@@ -53,11 +53,11 @@
     padding-top: 40px;
     background-color: rgba(0, 0, 0, 0.2);
 
-    .mat-list {
-      .mat-list-item {
+    .mat-mdc-list {
+      .mat-mdc-list-item {
         height: max-content !important;
-
-        .mat-list-item-content {
+        /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version. */
+        .mat-mdc-list-item-content {
           padding: 0 !important;
         }
       }
