--- a/src/app/modules/features/account/components/login/login.component.scss
+++ b/src/app/modules/features/account/components/login/login.component.scss
@@ -9,11 +9,17 @@
             animation: move 0.5s;
         }
 
-        .mat-form-field {
+        .mat-mdc-form-field {
             &.mat-form-field-appearance-fill {
-                .mat-form-field-wrapper {
-                    .mat-form-field-flex {
-                        .mat-form-field-prefix {
+                /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+                /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+                /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+                .mat-mdc-form-field-wrapper {
+                    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+                    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+                    .mat-mdc-form-field-flex {
+                        /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+                        .mat-mdc-form-field-prefix {
                             height: 25px;
                             display: flex;
                             justify-content: center;
