--- a/src/app/modules/features/user-management/permissions/components/add-edit-permission/add-edit-permission.component.html
+++ b/src/app/modules/features/user-management/permissions/components/add-edit-permission/add-edit-permission.component.html
@@ -28,7 +28,7 @@
             {{ 'ACTIONS.CANCEL' | translate }}
         </button>
 
-        <button class="main-btn main font-14 text-white px-4 m-inline-start-3" type="submit" (click)="submit()" [disabled]="lookupFormGroup?.invalid"
+        <button class="main-btn main font-14 text-white px-4 m-inline-start-3" type="submit" (click)="submit()" [disabled]="lookupFormGroup.invalid"
                 mat-flat-button>
             {{ (pageType === 'add' ? 'ACTIONS.SUBMIT' : 'ACTIONS.SAVE') | translate }}
         </button>
