--- a/src/app/modules/shared/components/checkbox/checkbox.component.scss
+++ b/src/app/modules/shared/components/checkbox/checkbox.component.scss
@@ -1,18 +1,21 @@
 @import "style";
 
-:host ::ng-deep.mat-checkbox {
-    .mat-checkbox-layout {
+:host ::ng-deep.mat-mdc-checkbox {
+    /* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
+    .mat-mdc-checkbox-layout {
         margin: 0;
     }
 
     .mat-ripple-element {
         background-color: $primary;
     }
-
-    &.mat-checkbox-checked,
-    &.mat-checkbox-indeterminate {
+    /* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
+    /* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
+    &.mat-mdc-checkbox-checked,
+    &.mat-mdc-checkbox-indeterminate {
         &.mat-bg-primary {
-            .mat-checkbox-background {
+            /* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
+            .mat-mdc-checkbox-background {
                 background-color: $primary;
             }
         }
