--- a/src/app/modules/shared/components/datepicker/datepicker.component.scss
+++ b/src/app/modules/shared/components/datepicker/datepicker.component.scss
@@ -1,8 +1,14 @@
-::ng-deep .mat-form-field-appearance-legacy .mat-form-field-infix {
-    padding: 0.6375em 0;
 
-    .mat-form-field-label-wrapper {
-        .mat-form-field-label {
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+::ng-deep .mat-mdc-form-field-appearance-legacy .mat-mdc-form-field-infix {
+    padding: 0.6375em 0;
+    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+    .mat-mdc-form-field-label-wrapper {
+        /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+        .mat-mdc-form-field-label {
             margin: 0;
             line-height: normal;
         }
