--- a/src/app/modules/shared/components/delete-modal/delete-modal.component.scss
+++ b/src/app/modules/shared/components/delete-modal/delete-modal.component.scss
@@ -1,10 +1,10 @@
 ::ng-deep .cdk-overlay-pane {
-    .mat-dialog-container {
+    .mat-mdc-dialog-container {
         min-width: 90%;
         padding: 0;
     }
 
-    .mat-dialog-actions {
+    .mat-mdc-dialog-actions {
         box-sizing: border-box;
         margin: 0;
         padding: 1rem 1.5rem;
