--- a/src/app/modules/shared/components/input-text/input-text.component.scss
+++ b/src/app/modules/shared/components/input-text/input-text.component.scss
@@ -1,20 +1,21 @@
 ::ng-deep app-input-text {
     width: 100%;
-
-    .mat-form-field-label-wrapper {
+    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+    .mat-mdc-form-field-label-wrapper {
         top: -1.24375em;
-
-        .mat-form-field-label {
+        /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+        .mat-mdc-form-field-label {
             margin: 0;
             line-height: normal;
         }
     }
-
-    .mat-form-field-appearance-legacy .mat-form-field-infix {
+    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+    .mat-mdc-form-field-appearance-legacy .mat-form-field-infix {
         padding: .6375em 0;
     }
 
-    textarea.mat-input-element {
+    textarea.mat-mdc-input-element {
         line-height: 1.5;
     }
 }
