--- a/src/assets/scss/basics/_buttons.scss
+++ b/src/assets/scss/basics/_buttons.scss
@@ -3,8 +3,8 @@ button {
     box-shadow: none !important;
     outline: none !important;
   }
-
-  .mat-button-focus-overlay {
+  /* TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
+  .mat-mdc-button-focus-overlay {
     background: $white;
   }
 }
@@ -110,8 +110,8 @@ button {
   &.bg-transparent {
     border: 1.5px solid transparent !important;
   }
-
-  .mat-button-wrapper {
+  /* TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
+  .mat-mdc-button-wrapper {
     display: flex;
     width: 100%;
     line-height: 32px;
