--- a/src/app/modules/core/components/sidebar-list-item/sidebar-list-item.component.html
+++ b/src/app/modules/core/components/sidebar-list-item/sidebar-list-item.component.html
@@ -8,16 +8,12 @@
                    *ngIf="sidebarItem.icon">
                 </i>
 
-                <!-- <span class="m-inline-end-3" *ngIf="sidebarItem.svgIcon">
-                    <app-svg [name]="sidebarItem.svgIcon"></app-svg>
-                </span> -->
-
                 <span class="text-secondary w-max" [ngClass]="{'d-block': isSidebarOpened, 'd-none': !isSidebarOpened }">
                     {{ sidebarItem.label | translate }}
                 </span>
             </div>
 
-            <svg [ngClass]="{'animate': showContent}" xmlns="http://www.w3.org/2000/svg" width="10" viewBox="0 0 20 20" fill="#e7cfb4" *ngIf="sidebarItem.children">
+            <svg [ngClass]="{'animate': showContent}" xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 20 20" fill="#e7cfb4" *ngIf="sidebarItem.children">
                 <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                       clip-rule="evenodd" />
             </svg>
@@ -27,13 +23,8 @@
             <mat-list class="d-flex flex-column p-0" role="list">
                 <mat-list-item role="listitem" *ngFor="let child of sidebarItem.children" [secure]="child.permissions">
                     <a class="font-14 w-100 h-100 cursor-pointer" [routerLink]="[child.routerLinkName]">
-                        <div class="w-max d-flex align-items-center each px-4" routerLinkActive="active">
+                        <div class="w-max d-flex align-items-center each" routerLinkActive="active">
                             <i class="{{ child.icon }} font-22 text-secondary m-inline-end-3" *ngIf="child.icon" [title]="child.label | translate"></i>
-
-                            <!-- <span class="m-inline-end-3" *ngIf="child.svgIcon">
-                                <app-svg [name]="child.svgIcon"></app-svg>
-                            </span> -->
-
                             <span class="text-secondary" [ngClass]="{'d-block': isSidebarOpened, 'd-none': !isSidebarOpened }">
                                 {{ child.label | translate }}
                             </span>
