--- a/src/app/modules/core/components/sidebar-list-item/sidebar-list-item.component.scss
+++ b/src/app/modules/core/components/sidebar-list-item/sidebar-list-item.component.scss
@@ -5,7 +5,11 @@
 
     .mat-mdc-list {
         .mat-mdc-list-item {
+            padding: 0 !important;
+            // padding-left: 5px !important;
+            // padding-right: 5px !important;
             height: max-content !important;
+
             /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
             .mat-mdc-list-item-content {
                 padding: 0 !important;
@@ -15,7 +19,6 @@
 
     .each {
         border-inline-start: 5px solid transparent;
-        padding-inline: calc(1rem + 1.5px);
         overflow: hidden;
         transform: translate(-100%, 0);
 
@@ -81,7 +84,7 @@
         transition: all 0.5s ease;
 
         &.showContent {
-            margin: .5rem 0;
+            margin: 1rem 0;
         }
     }
 }
