--- a/src/app/modules/core/components/sidebar-list-item/sidebar-list-item.component.scss
+++ b/src/app/modules/core/components/sidebar-list-item/sidebar-list-item.component.scss
@@ -3,24 +3,11 @@
 ::ng-deep app-sidebar-list-item {
     width: 100%;
 
-    .mat-mdc-list {
-        .mat-mdc-list-item {
-            padding: 0 !important;
-            // padding-left: 5px !important;
-            // padding-right: 5px !important;
-            height: max-content !important;
-
-            /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
-            .mat-mdc-list-item-content {
-                padding: 0 !important;
-            }
-        }
-    }
-
     .each {
         border-inline-start: 5px solid transparent;
         overflow: hidden;
         transform: translate(-100%, 0);
+        padding-inline: calc(1rem + 1.5px);
 
         // &.rtl {
         //     transform: translate(100%, 0);
@@ -84,7 +71,11 @@
         transition: all 0.5s ease;
 
         &.showContent {
-            margin: 1rem 0;
+            margin: .5rem 0;
+        }
+
+        .child {
+            padding-inline-start: .25rem;
         }
     }
 }
