--- a/src/app/modules/core/components/sidebar/sidebar.component.html
+++ b/src/app/modules/core/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <aside class="sidebar-wrapper bg-primary d-flex flex-column h-100" [ngClass]="{'opened': isSidebarOpened}">
     <div class="sidebar-logo d-flex align-items-center p-inline-start-2 p-inline-end-3">
-        <img class="m-inline-start-1" width="48" src="assets/images/logo/logo-white.svg" />
+        <img class="m-inline-start-1" width="48" src="assets/images/logo/logo.png" />
         <h3 class="m-0 regular font-22 text-middle m-inline-start-3 sidebar-title" [ngClass]="{'show': isSidebarOpened}">{{ 'Title' | translate }}</h3>
     </div>
 
