--- a/src/app/modules/features/user-management/login-history/pages/login-history/login-history.component.html
+++ b/src/app/modules/features/user-management/login-history/pages/login-history/login-history.component.html
@@ -4,8 +4,6 @@
     </div>
 
     <div class="products mt-4 h-100" *ngIf="tableOptions">
-        <app-table [tableOptions]="tableOptions"></app-table>
+        <app-data-table [tableOptions]="tableOptions"></app-data-table>
     </div>
 </div>
-
-<router-outlet></router-outlet>
