--- a/src/app/modules/features/user-management/permissions/pages/permissions/permissions.component.html
+++ b/src/app/modules/features/user-management/permissions/pages/permissions/permissions.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="products mt-4 h-100" *ngIf="tableOptions">
-        <app-table [tableOptions]="tableOptions"></app-table>
+        <app-data-table [tableOptions]="tableOptions"></app-data-table>
     </div>
 </div>
 
