--- a/src/app/modules/features/reports/pages/transactions-reports/transactions-reports.component.html
+++ b/src/app/modules/features/reports/pages/transactions-reports/transactions-reports.component.html
@@ -8,6 +8,6 @@
     </div>
 
     <div class="products mt-4 h-100" *ngIf="tableOptions">
-        <app-table [tableOptions]="tableOptions" #tableComponent></app-table>
+        <app-data-table [tableOptions]="tableOptions" #dataTableComponent></app-data-table>
     </div>
 </div>
