--- a/src/app/modules/features/user-management/users/pages/users/users.component.html
+++ b/src/app/modules/features/user-management/users/pages/users/users.component.html
@@ -3,10 +3,11 @@
         <h3 class="m-0 font-28">{{ title | translate }}</h3>
 
         <a [routerLink]="[ 'add' ]" *ngIf="pageType === 'list'">
-            <button class="main-btn align-self-center font-14 main border-radius-2 py-1 px-2 mt-2 mt-sm-0" type="button" mat-flat-button>
+            <button class="main-btn align-self-center font-14 main border-radius-2 py-1 px-2 mt-2 mt-sm-0" type="button"
+                mat-flat-button>
                 <div class="d-flex align-items-center">
                     <i class="bx bx-plus m-inline-end-1 font-18"></i>
-    
+
                     <span class="p-inline-end-1">{{ 'ACTIONS.ADD' | translate }}</span>
                 </div>
             </button>
@@ -14,7 +15,7 @@
     </div>
 
     <div class="products mt-4 h-100" *ngIf="tableOptions">
-        <app-table [tableOptions]="tableOptions"></app-table>
+        <app-data-table [tableOptions]="tableOptions"></app-data-table>
     </div>
 </div>
 
