--- a/src/app/modules/core/components/navbar/navbar.component.scss
+++ b/src/app/modules/core/components/navbar/navbar.component.scss
@@ -13,6 +13,14 @@
             .mat-mdc-list-item-content {
                 padding: 0 !important;
             }
+
         }
     }
+}
+
+::ng-deep .mat-mdc-list-item,
+.mat-mdc-list-option {
+
+    width: unset !important;
+
 }
